--- a/public/html/userDash.html
+++ b/public/html/userDash.html
@@ -3,7 +3,7 @@
   <head>
     <title>GroupEats</title>
     <script type="text/javascript" src='/bower_components/angular/angular.js'></script>
-    <script type="text/javascript" src='/javascripts/app.js'></script>
+    <script type="text/javascript" src='/stylesheets/app.js'></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
 
