--- a/public/html/userDash.html
+++ b/public/html/userDash.html
@@ -15,15 +15,16 @@
 
       <div class='request'>
         Submit a new request here:
-        <form action='/request' method='POST'>
-          <div><input type='text' name='address' placeholder='Starting Address'></div>
-          <div><input type='text' name='city' placeholder='City'></div>
-          <div><input type='text' name='state' placeholder='State'></div>
-          <div><input type='text' name='radius' placeholder='How far (miles)'></div>
-          <div><input type='date' name='targetDate' placeholder='When'></div>
-          <div><input type='time' name='targetTime' placeholder='What Time'></div>
-          <div><input type='text' name='groupSize'placeholder='Group Size'></div>
-          <div><input type='text' name='requestNotes' placeholder='Notes'></div>
+        <!-- action='/request' method='POST'  -->
+        <form ng-submit='sendRequest()'>
+          <div><input type='text' ng-model='address' name='address' placeholder='Starting Address'></div>
+          <div><input type='text' ng-model='city' name='city' placeholder='City'></div>
+          <div><input type='text' ng-model='state' name='state' placeholder='State'></div>
+          <div><input type='text' ng-model='radius' name='radius' placeholder='How far (miles)'></div>
+          <div><input type='date' ng-model='targetDate' name='targetDate' placeholder='When'></div>
+          <div><input type='time' ng-model='targetTime' name='targetTime' placeholder='What Time'></div>
+          <div><input type='text' ng-model='groupSize' name='groupSize'placeholder='Group Size'></div>
+          <div><input type='text' ng-model='requestNotes' name='requestNotes' placeholder='Notes'></div>
           <div><input type='submit' value='Submit Request'></div>
         </form>
       </div>
@@ -39,7 +40,7 @@
             <th>Offers</th>
 
           </tr>
-          <tr ng-repeat='detail in details'>
+          <tr ng-repeat='detail in details | orderBy: "requestId":true'>
             <td>{{ detail.requestId }}</td>
             <td>{{ detail.targetDateTime | date:'MM-dd HH:mm'}}</td>
             <td>{{ detail.groupSize }}</td>
