Changed to Pronto

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -5,8 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-  <a href="/logout"><button type='button'>Logout</button></a>
-   Business!! YOU MADE IT!!!!
+
+    <h1>What is Pronto?</h1>
+
+    Pronto is a service that connects 
 
   </body>
 </html>
