--- a/public/html/userDash.html
+++ b/public/html/userDash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='app'>
   <head>
-    <title>GroupEats</title>
+    <title>Pronto</title>
     <script type="text/javascript" src='/bower_components/angular/angular.js'></script>
     <script type="text/javascript" src='/dashboard.js'></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -9,7 +9,7 @@
 
   <body ng-controller='mainCtrl'>
     <div class='header'></div>
-      <h1><span class='logo'>GroupEats</span></h1>
+      <h1><span class='logo'>Pronto</span></h1>
 <!--       <a class='logout' href="/logout"><button type='button'>Logout</button></a>
  -->
       <div class='request'>
